recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:11: error: value += is not a member of Int
    steps += 1
          ^Tree:12: error: value /= is not a member of Double
    length /= shrink
           ^